[workspace]
members = [
	"crates/*",
	"languages/c",
	"languages/elixir",
	"languages/javascript/node",
	"languages/javascript/wasm",
	"languages/python",
	"languages/rust",
	"languages/rust/examples/*",
]

[profile.dev.build-override]
debug-assertions = false
opt-level = 3
overflow-checks = false

[profile.release.build-override]
debug-assertions = false
opt-level = 3
overflow-checks = false

[profile.release]
lto = true
strip = true

[patch.crates-io]
sunfish = { git = "https://github.com/tangramdotdev/sunfish" }
