[workspace]
members = [
	"crates/*",
	"languages/c",
	"languages/elixir",
	"languages/javascript/node",
	"languages/javascript/wasm",
	"languages/python",
	"languages/rust",
	"languages/rust/examples/*",
]
resolver = "2"

[workspace.package]
authors = ["ModelFox <root@modelfox.dev>"]
description = "ModelFox makes it easy to train, deploy, and monitor machine learning models."
documentation = "https://docs.rs/modelfox"
edition = "2021"
homepage = "https://modelfox.dev"
license = "MIT"
repository = "https://github.com/modelfoxdotdev/modelfox"
version = "0.8.0"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
backtrace = "0.3"
base64 = "0.13"
bitvec = "1.0"
buffalo = { version = "0.4", features = ["bitvec", "ndarray"] }
bytes = "1.1"
cbindgen = "0.23"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.6", features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
colored = "2.0"
console_error_panic_hook = "0.1"
convert_case = "0.5"
csv = "1.0"
digest = "0.10"
dirs = "4.0"
duct = "0.13"
either = "1.0"
erl_nif = { version = "0.5", features = ["serde"] }
fast-float = "0.2"
flate2 = "1.0"
fnv = "1.0"
futures = "0.3"
futures-signals = "0.3"
getrandom = { version = "0.2", features = ["js"] }
glob = "0.3"
hex = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
indexmap = { version = "1.6", features = ["serde-1"] }
indoc = "1.0"
insta = "1.0"
itertools = "0.10"
lettre = { version = "0.10.0-rc.2", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1-rustls-tls"] }
libc = "0.2.91"
md-5 = "0.10"
memmap = "0.7"
multer = "2.0"
ndarray = { version = "0.15", features = ["rayon"] }
node_api = { version = "0.5", features = ["serde"] }
num = "0.4"
once_cell = "1.0"
pem = "1.0"
percent-encoding = "2.0"
pinwheel = "0.2"
pulldown-cmark = "0.9"
pretty_assertions = "1.0"
proc-macro2 = "1"
pyo3 = { version = "0.16", features = ["abi3-py37", "extension-module"] }
quote = "1"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.5"
regex = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rsa = "0.6"
rust-s3 = { version = "0.31", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yaml = "0.8"
serde-wasm-bindgen = "0.4"
sha-1 = "0.10"
sha2 = "0.10"
sqlx = { version = "0.5", default-features = false, features = ["any", "chrono", "postgres", "runtime-tokio-rustls", "sqlite"] }
sunfish = "0.7"
syn = { version = "1", features = ["full"] }
tar = "0.4"
tempfile = "3.0"
textwrap = "0.15"
time = "0.3"
tokio = { version = "1.18", features = ["full"] }
toml = "0.5"
tortoise = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-test = "0.2"
tracing-wasm = "0.2"
tree-sitter-highlight = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-rust = "0.20"
url = { version = "2.2", features = ["serde"] }
urlencoding = { version = "2.1" }
walkdir = "2.0"
wasm-bindgen = "0.2"
web-sys = "0.3"
winapi = "0.3"
zip = "0.6"

modelfox = { path = "languages/rust" }
modelfox_app = { path = "crates/app" }
modelfox_app_core = { path = "crates/app/core" }
modelfox_charts = { path = "crates/charts" }
modelfox_core = { path = "crates/core" }
modelfox_features = { path = "crates/features" }
modelfox_finite = { path = "crates/finite" }
modelfox_id = { path = "crates/id" }
modelfox_kill_chip = { path = "crates/kill_chip" }
modelfox_license = { path = "crates/license" }
modelfox_linear = { path = "crates/linear" }
modelfox_metrics = { path = "crates/metrics" }
modelfox_model = { path = "crates/model" }
modelfox_number_formatter = { path = "crates/number_formatter" }
modelfox_progress_counter = { path = "crates/progress_counter" }
modelfox_serve = { path = "crates/serve" }
modelfox_table = { path = "crates/table" }
modelfox_text = { path = "crates/text" }
modelfox_tree = { path = "crates/tree" }
modelfox_ui = { path = "crates/ui" }
modelfox_zip = { path = "crates/zip" }

[profile.dev.build-override]
debug-assertions = false
opt-level = 3
overflow-checks = false

[profile.release.build-override]
debug-assertions = false
opt-level = 3
overflow-checks = false

[profile.release]
lto = true
strip = true

[patch.crates-io]
sunfish = { path = "../sunfish" }
