[package]
edition = "2018"
name = "tangram_charts"
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
html = { path = "../util/html" }
itertools = "0.10"
num = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tangram_number_formatter = { path = "../util/number_formatter" }
tangram_finite = { path = "../util/finite" }
wasm-bindgen = "0.2.69"
web-sys = "0.3.45"