[package]
default-run = "tangram"
edition = "2018"
license = "MIT"
name = "tangram_cli"
publish = false
version = "0.3.0"

[[bin]]
name = "tangram"
path = "main.rs"

[build-dependencies]
duct = "0.13"

[features]
default = ["train", "app"]
train = []
app = ["tangram_app"]

[dependencies]
backtrace = "0.3"
base64 = "0.13"
clap = { version = "3.0.0-beta.2", features = ["color"] }
colored = "2"
csv = "1"
dirs = "3"
either = "1"
itertools = "0.10"
num = "0.4"
once_cell = "1"
rayon = "1.5"
rsa = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
tangram_app = { path = "../app", optional = true }
tangram_core = { path = "../core" }
tangram_error = { path = "../error" }
tangram_id = { path = "../id" }
tangram_kill_chip = { path = "../kill_chip" }
tangram_model = { path = "../model" }
tangram_progress_counter = { path = "../progress_counter" }
tangram_table = { path = "../table" }
tangram_term = { path = "../term" }
tangram_zip = { path = "../zip" }
tracing = "0.1"
tracing-subscriber = "0.2"
url = { version = "2", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "consoleapi",
  "handleapi",
  "processenv",
  "winbase",
  "wincon",
] }
