[package]
edition = "2018"
license = "UNLICENSED"
name = "tangram_core"
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
bitvec = "0.19"
chrono = { version = "0.4", features = ["serde"] }
fast-float = "0.2"
fnv = "1"
indexmap = { version = "1.6", features = ["serde-1"] }
itertools = "0.10"
ndarray = { version = "0.15", features = ["rayon"] }
num = "0.4"
rand = "0.8"
rand_xoshiro = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tangram_error = { path = "../util/error" }
tangram_features = { path = "../features" }
tangram_finite = { path = "../util/finite" }
tangram_id = { path = "../util/id" }
tangram_kill_chip = { path = "../util/kill_chip" }
tangram_linear = { path = "../linear" }
tangram_metrics = { path = "../metrics" }
tangram_model = { path = "../model" }
tangram_progress_counter = { path = "../util/progress_counter" }
tangram_serialize = { path = "../util/serialize" }
tangram_table = { path = "../table" }
tangram_text = { path = "../text" }
tangram_tree = { path = "../tree" }
tangram_zip = { path = "../util/zip" }
