[package]
edition = "2018"
license = "MIT"
name = "tangram_license"
publish = true
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
base64 = "0.13"
indoc = "1"
pem = "0.8"
rand = "0.8"
rsa = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
tangram_error = { path = "../error" }
tangram_id = { path = "../id" }
