[package]
edition = "2018"
license = "MIT"
name = "tangram_table"
publish = true
version = "0.0.0"

[lib]
path = "lib.rs"

[dev-dependencies]
insta = "1"

[dependencies]
csv = "1"
fast-float = "0.2"
fnv = "1"
ndarray = { version = "0.15", features = ["rayon"] }
num = "0.4"
tangram_error = { path = "../error" }
tangram_progress_counter = { path = "../progress_counter" }
tangram_zip = { path = "../zip" }
