[package]
edition = "2018"
name = "tangram_ui"
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
html = { path = "../util/html" }
num = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tangram_number_formatter = { path = "../util/number_formatter" }
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
web-sys = { version = "0.3.45", features = [
  "CanvasRenderingContext2d",
  "console",
  "CssStyleDeclaration",
  "Document",
  "DomRect",
  "DomStringMap",
  "Element",
  "EventListener",
  "EventTarget",
  "File",
  "FileList",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "InputEvent",
  "MediaQueryList",
  "MouseEvent",
  "Node",
  "NodeList",
  "Performance",
  "Text",
  "TextMetrics",
  "Touch",
  "TouchEvent",
  "TouchList",
  "Window",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tree-sitter = "0.19"
tree-sitter-go = { git = "https://github.com/tree-sitter/tree-sitter-go" }
tree-sitter-highlight = "0.19"
tree-sitter-javascript = "0.19"
tree-sitter-python = "0.19"
tree-sitter-rust = "0.19"
