[package]
edition = "2018"
name = "tangram_api"
publish = false
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
http = "0.2"
hyper = { version = "0.14", features = ["server"] }
memmap = "0.7"
num = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", default-features = false, features = ["any", "chrono", "postgres", "runtime-tokio-rustls", "sqlite"] }
tangram_app_common = { path = "../common" }
tangram_core = { path = "../../core" }
tangram_error = { path = "../../error" }
tangram_id = { path = "../../id" }
tangram_metrics = { path = "../../metrics" }
tangram_model = { path = "../../model" }
url = { version = "2", features = ["serde"] }
