[package]
edition = "2018"
name = "tangram_app_common"
publish = false
version = "0.0.0"

[lib]
path = "lib.rs"

[dev-dependencies]
insta = "1"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.5", features = ["serde"] }
fnv = "1"
pinwheel = { path = "../../pinwheel" }
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
indexmap = { version = "1.6", features = ["serde-1"] }
itertools = "0.10"
lettre = { version = "0.10.0-rc.2", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1-rustls-tls"] }
memmap = "0.7"
ndarray = { version = "0.15", features = ["rayon"] }
num = "0.4"
rand = "0.8"
rust-s3 = { version = "0.27.0-rc4" , default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", default-features = false, features = ["any", "chrono", "postgres", "runtime-tokio-rustls", "sqlite"] }
tangram_charts = { path = "../../charts" }
tangram_core = { path = "../../core" }
tangram_error = { path = "../../error" }
tangram_finite = { path = "../../finite" }
tangram_app_ui = { path = "../../app/ui" }
tangram_id = { path = "../../id" }
tangram_model = { path = "../../model" }
tangram_text = { path = "../../text" }
tangram_ui = { path = "../../ui" }
tangram_zip = { path = "../../zip" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = { version = "2", features = ["serde"] }
