[package]
edition = "2018"
name = "tangram_app_layouts"
publish = false
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
html = { path = "../../html" }
http = "0.2"
hyper = { version = "0.14", features = ["server"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", default-features = false, features = ["any", "chrono", "postgres", "runtime-tokio-rustls", "sqlite"] }
tangram_app_common = { path = "../common" }
tangram_error = { path = "../../error" }
tangram_id = { path = "../../id" }
tangram_ui = { path = "../../ui" }
